# mcp-server-python-demo

./: .gitignore  docker-compose.yml  readme.md
Docs/DATABASE/: comando postgresql para docker.txt  init.sql
mcp-server/: Dockerfile  main.py  pyproject.toml
